packages/opportunity-automation/main/default/objects/Opportunity/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <description>Opportunity region - based on Account location.</description>
    <label>Region</label>
    <length>80</length>
    <type>Text</type>
</CustomField>