packages/opportunity-automation/main/default/objects/Opportunity/fields/Risk_Score__c.field-meta.xml
<CustomField>
    <fullName>Risk_Score__c</fullName>
    <description>Risk Score of the Opportunity.</description>
    <label>Risk Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>