packages/opportunity-automation/main/default/objects/Opportunity/fields/Total_Product_Value__c.field-meta.xml
<CustomField>
    <fullName>Total_Product_Value__c</fullName>
    <description>Total value of all added products.</description>
    <label>Total Product Value</label>
    <summarizedField>OpportunityLineItem.TotalPrice</summarizedField>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>